gap fix

--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -1,10 +1,10 @@
-{{#shapes}}
-  .icon--{{base}} {
-    width: {{width.outer}}px;
-    height: {{height.outer}}px;
-    background-image: url('/temp/sprite/css{{{sprite}}}');
-    background-position: {{position.relative.xy}};
+{‌{#shapes}}
+  .icon--{‌{base}} {
+    width: {‌{width.outer}}px;
+    height: {‌{height.outer}}px;
+    background-image: url('/temp/sprite/css/{‌{‌{sprite}}}');
+    background-position: {‌{position.relative.xy}};
   }
-{{/shapes}}
+{‌{/shapes}}
 
 
